--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap');
 
 :root {
   --primary: #032541;
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -17,6 +17,16 @@ body {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+}
+
+.container .information {
+  float: right;
+  margin-left: 5px;
+}
+
+.container .information button {
+  margin-right: 15px;
+  margin-left: 10px;
 }
 
 @media (min-width: 768px) {
@@ -41,6 +51,13 @@ body {
 *:before,
 *:after {
   box-sizing: border-box;
+}
+
+.container .controls button {
+  float: right;
+  margin-right: 20px;
+  margin-bottom: 5px;
+  padding: 20px 30px;
 }
 
 .btn {
@@ -122,6 +139,11 @@ header .nav-links li:last-child {
   padding: 50px 0;
   max-width: 600px;
   margin: 0 auto;
+}
+
+.add-content .controls button {
+  margin-right: 20px;
+  margin-top: 10px;
 }
 
 .add-content .input-wrapper input {
