--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,13 @@ body {
   margin-left: auto;
 }
 
+.container .poster {
+  float: left;
+  margin-right: 30px;
+}
+
 .container .information {
-  float: right;
-  margin-left: 5px;
+  margin-left: 15px;
 }
 
 .container .information button {
@@ -219,7 +223,7 @@ header .nav-links li:last-child {
 }
 
 .count-pill {
-  display: block;
+  display: flex;
   background-color: var(--secondary);
   padding: 5px 15px;
   font-size: 1.125rem;
@@ -310,4 +314,18 @@ header .nav-links li:last-child {
   color: #c4c4c4;
   font-size: 3rem;
   text-align: center;
+}
+
+.container .watchtime {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  column-gap: 20px;
+  margin-top: 20px;
+}
+
+.container .watchtime button {
+  margin-left: 10px;
 }
